--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.9.0",
     "naive-ui": "^2.41.0",
     "pinia": "^3.0.1",
+    "uv-inexus": "link:",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
