UI框架更改&&根据菜单生成路由

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@vicons/ionicons5": "^0.13.0",
+    "@ant-design/icons-vue": "^7.0.1",
+    "ant-design-vue": "4.x",
     "axios": "^1.9.0",
-    "naive-ui": "^2.41.0",
     "pinia": "^3.0.1",
     "uv-inexus": "link:",
     "vue": "^3.5.13",
@@ -36,8 +36,6 @@
     "prettier": "3.5.3",
     "tailwindcss": "^4.1.7",
     "typescript": "~5.8.0",
-    "unplugin-auto-import": "^19.3.0",
-    "unplugin-vue-components": "^28.7.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.8"
