--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint src/**/*.{ts,vue}",
     "lint:fix": "eslint src/**/*.{ts,vue} --fix",
     "lint:style": "stylelint src/**/*.{less,css,vue}",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/**/*.{ts,vue}"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
